--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "basico",
   "version": "0.0.0",
   "scripts": {
+    "heroku-postbuild": "ng build --prod",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+  },
+  "engines":{
+    "node": "10.16.3",
+    "npm": "6.14.13"
   },
   "private": true,
   "dependencies": {
@@ -23,7 +28,8 @@
     "core-js": "^2.5.4",
     "ngx-socket-io": "^2.0.0",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "typescript": "~3.1.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
